updates to html files to match php, corrected menu z-index

--- a/css/mo_style.css
+++ b/css/mo_style.css
@@ -131,7 +131,6 @@ body {
 
 #menu {
     width: 20%;
-    height: auto;
     margin-right: 10%;
     float: right;
 } 
@@ -217,10 +216,19 @@ body {
 
 /* Main */
 
+/* #wrapper {
+    position: relative;
+    z-index: 5;
+    background-color: #FFFFFF;
+}*/
+
 #main, #content {
     max-width: 105em;
     width: 80%;
     margin: 1% 10% 1% 10%;
+    position: relative;
+    background-color: #FFFFFF;
+    z-index: 5;
 }
 
 #content p {
